--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
@@ -11,8 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Unofficial-hadoop-releases-for-windows</h1>
-      <h2 class="project-tagline">Unofficial Hadoop Binaries for Windows OS</h2>
+      <h2 class="project-tagline">aaUnofficial Hadoop Binaries for Windows OS</h2>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows" class="btn">View on GitHub</a>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/tarball/master" class="btn">Download .tar.gz</a>
