--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h2 class="project-tagline">aaUnofficial Hadoop Binaries for Windows OS</h2>
+      <h1 class="project-name">aaUnofficial-hadoop-releases-for-windows</h1>
+      <h2 class="project-tagline">Unofficial Hadoop Binaries for Windows OS</h2>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows" class="btn">View on GitHub</a>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/tarball/master" class="btn">Download .tar.gz</a>
