--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Releases (Windows x64)</h3>
 
+<p>Hadoop Release 2.3.0 | <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/releases/download/v2.3.0/hadoop-2.3.0.tar.gz">tar.gz </a> | <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/releases/download/v2.3.0/hadoop-2.3.0.zip"> zip </a> </p>
 <p>Hadoop Release 2.2.0 | <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/releases/download/v2.2.0/hadoop-2.2.0.tar.gz">tar.gz </a> | <a href="https://github.com/gopal-tiwari/Unofficial-Hadoop-Releases-for-Windows/releases/download/v2.2.0/hadoop-2.2.0.zip"> zip </a> </p>
 
 <h3>
