--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Compilation Process</h3>
 
-<p>Followed official Hadoop build instructions listed <a href="https://github.com/apache/hadoop/blob/trunk/BUILDING.txt" target="_blank">here.</a>
+<p>For build process, we followed official Hadoop build instructions listed <a href="https://github.com/apache/hadoop/blob/trunk/BUILDING.txt" target="_blank">here.</a>
          For more details on build process please follow the toturial @ <a href="https://dzone.com/articles/build-and-install-hadoop-on-windows-with-native-bi" target="_blank">dzone.com/articles/build-and-install-hadoop-on-windows-with-native-bi</a> .</p>
 
 <h3>
